--- a/tools/nginx.conf
+++ b/tools/nginx.conf
@@ -18,7 +18,16 @@ http {
     keepalive_timeout  65;
     tcp_nodelay        on;
 
+    server_tokens       off;
+    access_log off;
+
     gzip on;
+    gzip_min_length     1k;
+    gzip_buffers        4 8k;
+    gzip_http_version   1.1;
+    gzip_types          text/plain application/x-javascript text/css application/xml;
+
+
 
     upstream ourjs_org {
         server 127.0.0.1:8054;
@@ -34,10 +43,15 @@ http {
         }
 
         location / {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-NginX-Proxy true;
             proxy_pass http://ourjs_org;
         }
     }
 
+    #redirect www to non-www
     server {
         listen 80;
         server_name www.ourjs.org;
