--- a/tools/nginx.conf
+++ b/tools/nginx.conf
@@ -29,13 +29,13 @@ http {
 
 
 
-    upstream ourjs_org {
+    upstream code_ourjs_com {
         server 127.0.0.1:8054;
     }
 
     server {
         listen 80;
-        server_name ourjs.org;
+        server_name code.ourjs.com;
         location ~ ^/(img/|js/|css/|favicon.ico) {
             root /var/www/ourjs/web/magazine;
             access_log off;
@@ -47,15 +47,15 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-NginX-Proxy true;
-            proxy_pass http://ourjs_org;
+            proxy_pass http://code_ourjs_com;
         }
     }
 
-    #redirect www to non-www
+    #redirect www and non-www to code.ourjs.com
     server {
         listen 80;
-        server_name www.ourjs.org;
-        rewrite ^ http://ourjs.org$request_uri? permanent;
+        server_name www.ourjs.org ourjs.org;
+        rewrite ^ http://code.ourjs.com$request_uri? permanent;
     }
 
 }
