--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ourjs", 
-  "description": "Free Blog, Website and CMS platform", 
-  "version": "0.0.12",
+  "description": "Free Blog Engine, Forum System, Website Template and CMS Platform based on Node.JS", 
+  "version": "0.0.13",
   "dependencies": {
       "websvr"         : "0.1.x"
     , "cssshrink"      : "0.x"
