--- a/tools/nginx.conf
+++ b/tools/nginx.conf
@@ -28,7 +28,9 @@ http {
     gzip_types          text/plain application/x-javascript text/css application/xml;
 
 
-
+    #*******************************************
+    #THEME magazine: code.ourjs.com
+    #*******************************************
     upstream code_ourjs_com {
         server 127.0.0.1:8054;
     }
@@ -56,6 +58,32 @@ http {
         listen 80;
         server_name www.ourjs.org ourjs.org;
         rewrite ^ http://code.ourjs.com$request_uri? permanent;
+    }
+
+
+    #*******************************************
+    #THEME newspaper: demo.ourjs.com
+    #*******************************************
+    upstream demo_ourjs_com {
+        server 127.0.0.1:8052;
+    }
+
+    server {
+        listen 80;
+        server_name demo.ourjs.com;
+        location ~ ^/(img/|js/|css/|favicon.ico) {
+            root /var/www/ourjs/web/newspaper;
+            access_log off;
+            expires max;
+        }
+
+        location / {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-NginX-Proxy true;
+            proxy_pass http://demo_ourjs_com;
+        }
     }
 
 }
