--- a/tools/nginx.conf
+++ b/tools/nginx.conf
@@ -10,7 +10,7 @@ events {
 }
 
 http {
-    include       /etc/nginx/mime.types;
+    include         /etc/nginx/mime.types;
     sendfile        on;
     #tcp_nopush     on;
 
@@ -29,17 +29,17 @@ http {
 
 
     #*******************************************
-    #THEME magazine: code.ourjs.com
+    #THEME default: anynb.com
     #*******************************************
-    upstream code_ourjs_com {
-        server 127.0.0.1:8054;
+    upstream anynb_com {
+        server 127.0.0.1:8051;
     }
 
     server {
         listen 80;
-        server_name code.ourjs.com;
+        server_name anynb.com;
         location ~ ^/(img/|js/|css/|favicon.ico) {
-            root /var/www/ourjs/web/magazine;
+            root /var/www/ourjs/web;
             access_log off;
             expires max;
         }
@@ -49,41 +49,15 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-NginX-Proxy true;
-            proxy_pass http://code_ourjs_com;
+            proxy_pass http://anynb_com;
         }
     }
 
-    #redirect www and non-www to code.ourjs.com
+    #redirect www to non-www
     server {
         listen 80;
-        server_name www.ourjs.org ourjs.org;
-        rewrite ^ http://code.ourjs.com$request_uri? permanent;
-    }
-
-
-    #*******************************************
-    #THEME newspaper: demo.ourjs.com
-    #*******************************************
-    upstream demo_ourjs_com {
-        server 127.0.0.1:8052;
-    }
-
-    server {
-        listen 80;
-        server_name demo.ourjs.com;
-        location ~ ^/(img/|js/|css/|favicon.ico) {
-            root /var/www/ourjs/web/newspaper;
-            access_log off;
-            expires max;
-        }
-
-        location / {
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-NginX-Proxy true;
-            proxy_pass http://demo_ourjs_com;
-        }
+        server_name www.anynb.com;
+        rewrite ^ http://anynb.com$request_uri? permanent;
     }
 
 }
